--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,34 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  font-family: Inter, system-ui, sans-serif;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background: #eef2f7;
+}
+.sidebar {
+  width: 250px;
+  background: #111827;
+  padding: 16px;
+  border-radius: 8px;
+  color: white;
+}
+.sidebar-container {
+  padding: 8px;
+  border-radius: 8px;
+}
+.sidebar-item {
+  background: #1f2937;
+  margin-bottom: 8px;
+  border-radius: 6px;
+}
+.canvas {
+  flex: 1;
+}
+.canvas-container {
+  border-radius: 0px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.swiper-button-prev,
+.swiper-button-next {
+  z-index: 999999 !important;
 }
 
 button {
@@ -42,27 +38,14 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #989797;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #dbdbdb;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
